--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aluraflix</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <section class="principal container">
+        <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura língua por um preço único.</h1>
+        <img src="" alt="O combo+ é a junção do alura+ e o alura língua">
+    </section>    
+</body>
+</html>
