--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <section class="principal container">
         <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura língua por um preço único.</h1>
         <img src="" alt="O combo+ é a junção do alura+ e o alura língua">
+         <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
     </section>    
 </body>
 </html>
