--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura língua por um preço único.</h1>
         <img src="" alt="O combo+ é a junção do alura+ e o alura língua">
          <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
+       <!-- inserir após a div <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a> -->
         <!-- </div> -->
     </section>    
 </body>
