--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </head>
 <body>
     <section class="principal container">
-        <!-- <div> div inserida após corrigir grid no css--> 
+        <div> 
         <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura língua por um preço único.</h1>
         <img src="" alt="O combo+ é a junção do alura+ e o alura língua">
          <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
-       <!-- inserir após a div <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a> 
-        <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p> -->
-        <!-- </div> -->
+         <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a> 
+         <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p> 
+        </div>
     </section>    
 </body>
 </html>
