--- a/index.html
+++ b/index.html
@@ -12,12 +12,33 @@
 <body>
     <section class="principal container">
         <div> 
-        <h1 <!--class="container__titulo"-->>Com o Combo+, você pode aproveitar a Alura+ e o Alura língua por um preço único.</h1>
-        <img src="<!-- img/Combo.png -->" alt="O combo+ é a junção do alura+ e o alura língua">
+        <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura língua por um preço único.</h1>
+        <img src="img/Combo.png>" alt="O combo+ é a junção do alura+ e o alura língua">
         <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
         <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a> 
         <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p> 
         </div>
-        </section> 
+        </section>
+<!--
+     <section class="container secundario">
+        <div class="container__descricao">
+            <p class="descricao__texto">
+                Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da
+                tecnologia e aprender inglês ou espanhol, onde e como quiser.
+            </p>
+            <a href="www.alura.com.br" class="container__botao secundario__botao" container>Assine o Combo+</a>
+        </div>
+        <img src="img/Telas.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
+    </section>
+
+    <section class="container secundario">
+        <img src="img/Notebook.png" alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta"
+            class="secundario__imagem">
+        <div class="container__descricao">
+            <h2 class="descricao__titulo">Baixe seus cursos</h2>
+            <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com
+                você, até mesmo sem internet.</p>
+        </div>
+    </section> -->
 </body>
 </html>
