--- a/index.html
+++ b/index.html
@@ -33,12 +33,11 @@
     </section>
 <!--
     <section class="container secundario">
-        <img src="img/Notebook.png" alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta"
-            class="secundario__imagem">
+        <img src="img/Notebook.png" alt="Notebook" class="secundario__imagem">
         <div class="container__descricao">
             <h2 class="descricao__titulo">Baixe seus cursos</h2>
-            <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com
-                você, até mesmo sem internet.</p>
+            <p class="descricao__texto">Baixe e assista quando e onde quiser. 
+            Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
         </div>
     </section> -->
 </body>
