--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <img src="img/Telas.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
     </section>
-<!--
+
     <section class="container secundario">
         <img src="img/Notebook.png" alt="Notebook" class="secundario__imagem">
         <div class="container__descricao">
@@ -39,6 +39,9 @@
             <p class="descricao__texto">Baixe e assista quando e onde quiser. 
             Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
         </div>
-    </section> -->
+    </section>
+
+    <footer class="rodape"> <!--add 01/07 -->
+    </footer>    <!--add 01/07 -->
 </body>
 </html>
